--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -17,9 +17,7 @@
         <ul>
             <!-- loops through all of our md files with the tag 'post' --> 
         {% for post in collections.post %}
-        <li><a href="{{ post.url | prefixedUrl }}">{{ post.data.title }}</a> 
-          – {{ post.date | readableDate }}
-        </li>
+        <li><a href="{{ post.url | prefixedUrl }}">{{ post.date | readableDate }}</a></li>
         {% endfor %}
         </ul>
     </main>
