--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,12 +53,13 @@ p {
   
   li a {
     color: #fff;
-    text-decoration: underline;
+    text-decoration: none;
     transition: opacity 0.3s;
   }
   
   li a:hover {
     opacity: 0.7;
+    text-decoration: underline;
   }
   
   /* Footer */
@@ -118,6 +119,15 @@ p {
     margin-top: 3vh;
     margin-bottom: 2vh;
   }
+
+  .Index-image{
+    width: 30vh;
+    height: 40vh;
+    margin-left: 15vh;
+    margin-top: 3vh;
+    margin-bottom: 2vh;
+  }
+  
   
 
 
